[package]
name = "egui-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"

winit = { version = "0.29.10", default-features = false, features = ["rwh_06"] }
egui = "0.26.2"
egui_demo_lib = "0.26.2"
egui-winit = { version = "0.26.2", default-features = false }
egui-directx11 = { path = "../.."}

windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
] }
